add mobile view

--- a/homework.html
+++ b/homework.html
@@ -2,18 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
-   <title>Super Slick Company</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/starter.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/logo_icon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Super Slick Company</title>
   </head>
   <body>
-    <a class = "skip">Skip to Main Content</a>
+    <a class = "skip" href="#skip">Skip to Main Content</a>
     <header>
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
         <ul class="nav_links">
-          <li class="nav_item"><a href="">About</a></li>
-          <li class="nav_item"><a href="">Prices</a></li>
-          <li class="nav_item"><a href="">Gallery</a></li>
+          <li class="nav_item"><a href="#skip">About</a></li>
+          <li class="nav_item"><a href="#pricing">Prices</a></li>
+          <li class="nav_item"><a href="#gallery">Gallery</a></li>
         </ul>
     </nav>
   </header>
